installers/aws-eks/install/templates/sdlc/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdlc
  namespace: legend
  labels:
    app: sdlc
    ci.name: sdlc
spec:
  replicas: 2
  selector:
    matchLabels:
      # this identifes which pods are part of the deployment
      ci.name: sdlc
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        # the labels repeat here
        app: sdlc
        ci.name: sdlc
    spec:
      containers:
        - name: sdlc
          image: __LEGEND_SDLC_VERSION__
          livenessProbe:
            httpGet:
              path: /sdlc/admin/healthcheck
              port: __LEGEND_SDLC_ADMIN_PORT__
            initialDelaySeconds: 300
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /sdlc/admin/healthcheck
              port: __LEGEND_SDLC_ADMIN_PORT__
            timeoutSeconds: 3
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
            - name: podinfo
              mountPath: /podinfo
              readOnly: true
          resources:
            limits:
              cpu: 2
              memory: 2048Mi
            requests:
              cpu: 200m
              memory: 512Mi
      volumes:
        - name: config
          configMap:
            name: sdlc
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              - path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
